--- a/WebContent/css/join.css
+++ b/WebContent/css/join.css
@@ -1,12 +1,11 @@
 @charset "UTF-8";
 
-.joinfmain{
-	width: 70%;
+.joinfmain {
+	width: 60%;
 	margin: 0 auto;
 }
 
-
-.joinf1{
+.joinf1 {
 	width: 20%;
 	float: left;
 	padding-top: 5%;
@@ -14,22 +13,22 @@
 	margin: 0 auto;
 }
 
-.joinf1_1{
+.joinf1_1 {
 	margin-bottom: 20%;
 }
 
-.joinf1_2{
+.joinf1_2 {
 	margin-bottom: 15%;
 }
 
-.joinf2{
+.joinf2 {
 	width: 74%;
 	float: right;
 	padding-top: 5%;
-	margin: 0 auto;	
+	margin: 0 auto;
 }
 
-.joinf2_wrap{
+.joinf2_wrap {
 	width: 100%;
 }
 
@@ -37,6 +36,7 @@
 	color: #6f6f6f;
 	font-size: 12px;
 }
+
 .jf2_1_1 {
 	padding-top: 2%;
 	padding-bottom: 8%;
@@ -47,7 +47,7 @@
 }
 
 .jf2_1_3 {
-	padding-top:8%;
+	padding-top: 8%;
 	padding-bottom: 3%;
 }
 
@@ -55,25 +55,25 @@
 	padding-bottom: 3%;
 }
 
-.jfh{
+.jfh {
 	font-size: 12px;
 	color: #6f6f6f;
 	padding-bottom: 6%;
 }
 
-.jftitle{
+.jftitle {
 	font-weight: bold;
 	font-size: 16px;
 	padding-bottom: 3%;
 	padding-top: 3%;
 }
 
-.jftxt{
+.jftxt {
 	/* width:698px; */
-	width:100%;
-	height:198px;
-	overflow-y:auto;
-	border: 1px solid  #d9d9d9;
+	width: 100%;
+	height: 198px;
+	overflow-y: auto;
+	border: 1px solid #d9d9d9;
 	/* margin: 18px; */
 	color: #6f6f6f;
 	font-size: 12px;
@@ -82,13 +82,13 @@
 	margin-bottom: 2%;
 }
 
-.jfc{
+.jfc {
 	padding-bottom: 3%;
 	font-size: 12px;
 	color: #6f6f6f;
 }
 
-.jff{
+.jff {
 	background-color: #e7e7e7;
 	color: #6f6f6f;
 	font-size: 12px;
@@ -97,13 +97,13 @@
 	line-height: 33px;
 }
 
-.jff2{
+.jff2 {
 	text-align: center;
 	padding-top: 6%;
 	padding-bottom: 12%;
 }
 
-.jff2 input{
+.jff2 input {
 	height: 29px;
 	width: 129px;
 	font-size: 13px;
@@ -115,64 +115,112 @@
 	border-collapse: collapse;
 }
 
-
-.jmt_input{
+.jmt_input {
 	height: 24px;
 }
 
- .jmtl{
- width:20%;
- font-weight: bold;
+.jmtl {
+	width: 20%;
+	font-weight: bold;
 	font-size: 12px;
 	color: #303030;
 	padding-left: 13px;
 	padding-top: 2%;
 	padding-bottom: 2%;
-	border-bottom: 1px solid  #d9d9d9;
-	border-right: 1px solid  #d9d9d9;
- }
- 
- .jmtr{
- padding-top: 2px;
- padding-left:5px;
-	border-bottom: 1px solid  #d9d9d9;
+	border-bottom: 1px solid #d9d9d9;
+	border-right: 1px solid #d9d9d9;
+}
+
+.jmtr {
+	padding-top: 2px;
+	padding-left: 5px;
+	border-bottom: 1px solid #d9d9d9;
 	font-size: 12px;
 	color: #6f6f6f;
 	line-height: 19px;
 	box-sizing: border-box;
- }
- 
- .jmtr_b{
-margin-left: 3px;
-margin-right: 3px;
-font-size: 11px ;
-color: #808080;
-background-color: white;
-width: 60px;
-height: 27.5px;
-border: 1px solid #afafaf;
- }
- 
- 
- .jmtrft{
- width: 10%;
- height: 24px;
- }
- 
- 
- .jmtlf{
- width:20%;
- font-weight: bold;
+}
+
+.jmtr_b {
+	margin-left: 3px;
+	margin-right: 3px;
+	font-size: 11px;
+	color: #808080;
+	background-color: white;
+	width: 60px;
+	height: 27.5px;
+	border: 1px solid #afafaf;
+}
+
+.jmtrft {
+	width: 10%;
+	height: 24px;
+}
+
+.jmtlf {
+	width: 20%;
+	font-weight: bold;
 	font-size: 12px;
 	color: #303030;
 	padding-left: 13px;
 	padding-top: 2%;
 	padding-bottom: 2%;
-	border-right: 1px solid  #d9d9d9;
- }
- 
- .jmtrf{
-  padding-left:5px;
+	border-right: 1px solid #d9d9d9;
+}
+
+.jmtrf {
+	padding-left: 5px;
 	font-size: 12px;
 	color: #6f6f6f;
- }
+}
+
+#jmf_b1{
+	width: 82px;
+	height: 35px;
+	font: 13px;
+	color: #ffffff;
+	background-color: #ba000e;
+	font-weight: bold;
+	border: 1px solid #ba000e;
+}
+
+#jmf_b2{
+	width: 82px;
+	height: 35px;
+	font: 13px;
+	color: #303030;
+	font-weight: bold;
+	border: 1px solid #aeaeae;
+}
+
+.jmtemail{
+	width: 107px;
+	background-color: #f6f6f6;
+	border: 1px solid #afafaf;
+}
+
+.jmtemail_s{
+	 height: 26.8px;
+	 margin-top: 4px;
+	 width: 120px;
+	 color: #6f6f6f;
+}
+
+.jmtadd{
+	width: 88%;
+	background-color: #f6f6f6;
+	border: 1px solid #afafaf;
+}
+
+.jmtf_txt{
+	font-size: 12px;
+	color: #303030;
+	font-weight: bold;
+	line-height: 18px;
+}
+
+.jmtf_txt2{
+	font-size: 11px; 
+	color: #6f6f6f;
+	line-height: 18px;
+}
