--- a/WebContent/css/login.css
+++ b/WebContent/css/login.css
@@ -1,7 +1,8 @@
 @charset "UTF-8";
 
 .loginmain {
-	width: 70%;
+	/* width: 70%; */
+	width:60%;
 	margin: 0 auto;
 }
 
@@ -77,15 +78,17 @@
 	height: 5em;
 	line-height:5em;
 	background-color: #ba000e;
-	color: #ffffff;
 	font-size: 13px;
 	font-weight: bold;
 	text-align: center;
-	
 	margin-left: 10px;
 	margin-bottom: 5px;
-
 }
+
+.lt3 a{
+	color: #ffffff;
+}
+
 
 .lt4 {
 	padding-top: 1%;
