--- a/WebContent/css/layout.css
+++ b/WebContent/css/layout.css
@@ -7,11 +7,9 @@ header {
 }
 
 .header_wrap {
-	/* width: 70%; */
-	width:50%;
+	width: 55%;
 	margin: 0 auto;
 	overflow: hidden;
-	
 }
 
 .header_top {
@@ -37,14 +35,14 @@ header {
 	float: left;
 }
 
-#ht2_3{
-	padding-right:9px;
+#ht2_3 {
+	padding-right: 9px;
 }
 
 .ht_logo {
+	padding-left: 47%;
 	margin-top: 2%;
 	margin-bottom: 2%;
-	padding-left: 47%;
 }
 
 .header_menu {
@@ -52,7 +50,7 @@ header {
 	float: left;
 }
 
-.header_menu ul{
+.header_menu ul {
 	width: 100%;
 }
 
@@ -69,14 +67,14 @@ header {
 
 /* main */
 .main {
-	width: 100%;
 	clear: both;
+	width: 100%;
 	min-height: 800px;
 	margin: 0 auto;
-	background-color: white;
-	overflow: hidden;
-	border-top: 2px #ba000e solid;
 	margin-bottom: 20px;
+	background-color: white;
+	border-top: 2px #ba000e solid;
+	overflow: hidden;
 }
 
 .main1 {
@@ -89,102 +87,96 @@ header {
 }
 
 .main2 {
-	/* width: 70%; */
-	width:50%;
+	width: 55%;
 	margin: 0 auto;
-	color: #6f6f6f;
 	font-size: 12px;
+	color: #6f6f6f;
 }
 
 .main2_wrap {
 	width: 100%;
 	margin: 0 auto;
-	background-color: aqua;
 }
 
 .m21 {
-	width:25%;
+	width: 25%;
 	float: left;
 	text-align: left;
 }
 
-.m21 img{
+.m21 img {
 	width: 100%;
 }
 
 .m22 {
-	float: left;
 	width: 50%;
 	height: 270px;
+	float: left;
 }
 
-.m22 > img {
+.m22>img {
 	width: 100%;
 	padding-left: 4%;
 }
 
-.m221{
+.m221 {
 	width: 100%;
 	height: 178px;
 	margin: 0 auto;
 }
 
-.m221 table{
-	width:80%;
+.m221 table {
+	width: 80%;
 	margin: 0 auto;
 	padding-top: 5%;
 }
 
-.m221 td{
-	width:34.333%;
-/* 	padding-left: 2%;
-	padding-right:2%; */
+.m221 td {
+	width: 34.333%;
 }
 
-.m221td{
-	padding-left:8%;
-	padding-right:8%;
+.m221td {
+	/* 	padding-left:3%;
+	padding-right:3%; */
 	border-left: 1px dotted gray;
 	border-right: 1px dotted gray;
 }
 
 .m23 {
-	width:25%;
+	width: 25%;
 	float: right;
 	text-align: right;
 }
 
-.m23 img{
+.m23 img {
 	width: 100%;
 }
 
 .main3 {
 	clear: both;
-	/* width: 70%; */
-	width:50%;
+	width: 55%;
 	margin: 0 auto;
 }
 
 .main3_wrap {
 	width: 100%;
-	padding-top: 40px;
 	margin: 0 auto;
+	padding-top: 4%;
 }
-
 
 .m31 {
-	width:50%;
-	text-align: left;
+	width: 50%;
 	float: left;
 	margin-right: 2px;
+	text-align: left;
 }
 
-.m31 img{
+.m31 img {
 	width: 100%;
 }
 
 .m32 {
-	width:49%;
+	width: 49%;
 	float: right;
 	text-align: right;
 }
@@ -194,37 +186,33 @@ header {
 }
 
 .main4 {
-	/* width: 70%; */
-	width:50%;
+	width: 55%;
 	margin: 0 auto;
 	text-align: left;
-	color: #6f6f6f;
 	font-size: 12px;
+	color: #6f6f6f;
 }
 
 .main4_wrap {
 	width: 100%;
 	float: left;
-	padding-top: 30px;
-	/* padding-right: 10px; */
-	padding-bottom: 30px;
-	/* padding-left: 10px; */
-	overflow: hidden;
 	margin: 0 auto;
+	padding-top: 30px;
+	padding-bottom: 30px;
+	overflow: hidden;
 }
 
-.m4{
-	width:23%;
-	padding-right:1%;
-	padding-left:1%;
+.m4 {
+	width: 23%;
 	float: left;
+	padding-left: 1%;
+	padding-right: 1%;
 }
 
 .m4p {
-	padding-down: 5px;
 	padding-top: 5px;
+	padding-down: 5px;
 }
-
 
 .m4s {
 	float: left;
@@ -237,13 +225,13 @@ header {
 }
 
 .m4 td {
-	text-align: center;
 	padding-left: 1%;
 	padding-right: 1%;
+	text-align: center;
 }
 
 .m4 table {
-	width:100%;
+	width: 100%;
 	margin: 0 auto;
 }
 
@@ -254,7 +242,7 @@ header {
 
 /* footer */
 footer {
-	clear:both;
+	clear: both;
 	width: 100%;
 	height: 148px;
 	background-color: #ba000c;
@@ -262,19 +250,17 @@ footer {
 }
 
 .footer_wrap {
-	font-size: 11px;
-	/* width: 70%; */
-	width:50%;
+	width: 55%;
 	height: 148px;
 	margin: 0 auto;
-	overflow: hidden;
 	padding-top: 33px;
+	font-size: 11px;
+	overflow: hidden;
 }
 
 .footer_info_1 {
-	/* float: left; */
-	color: #faeff0;
 	padding-bottom: 20px;
+	color: #faeff0;
 }
 
 .footer_info_1 li {
@@ -283,6 +269,5 @@ footer {
 }
 
 .footer_info_2 {
-/* 	float: left; */
 	color: #de898e;
 }
