--- a/WebContent/css/write.css
+++ b/WebContent/css/write.css
@@ -1,16 +1,16 @@
 @charset "UTF-8";
 
-.writemain{
-		width: 50%;
-		margin: 0 auto;
-	}
-	
+.writemain {
+	width: 55%;
+	margin: 0 auto;
+}
+
 .write1 {
 	width: 20%;
 	float: left;
+	margin: 0 auto;
 	padding-top: 5%;
 	padding-right: 6%;
-	margin: 0 auto;
 }
 
 .write1_1 {
@@ -24,141 +24,139 @@
 .write2 {
 	width: 70%;
 	float: left;
-	padding-top: 5%;
 	margin: 0 auto;
-	/* padding-left: 50px; */
+	padding-top: 5%;
 }
 
-.write2_wrap{
+.write2_wrap {
 	width: 100%;
 }
 
-.write2_1{
-	color: #6f6f6f;
+.write2_1 {
 	font-size: 12px;
+	color: #6f6f6f;
 }
 
-.w2_1_1{
+.w2_1_1 {
 	padding-top: 2%;
 	padding-bottom: 10%;
 }
 
-.write2 table, tr, td{
-	border-collapse: collapse; 
-	color:#303030;
+.write2 table, tr, td {
+	border-collapse: collapse;
+	color: #303030;
 }
 
-
-.write2 select{
+.write2 select {
 	color: #6f6f6f;
 }
 
-.wt1 td{
+.wt1 td {
+	padding-bottom: 20px;
+	font-size: 16px;
 	font-weight: bold;
 	border-bottom: 2px solid black;
-	font-size: 16px;
-	padding-bottom: 20px;
 }
 
-.wt2{
+.wt2 {
+	width: 15%;
 	font-weight: bold;
 	font-size: 12px;
-	width: 15%;
-	padding-left: 13px;
 	padding-top: 2%;
 	padding-bottom: 2%;
-	border-bottom: 1px solid  #d9d9d9;
-	border-right: 1px solid  #d9d9d9;
+	padding-left: 13px;
+	border-right: 1px solid #d9d9d9;
+	border-bottom: 1px solid #d9d9d9;
 }
 
 .wt3 {
-	padding-left:5px;
-	border-bottom: 1px solid  #d9d9d9;
+	padding-left: 5px;
+	border-bottom: 1px solid #d9d9d9;
 }
 
-.wt2title{
-	width:100%;
+.wt2title {
+	width: 100%;
 	padding-left: 1%;
 	padding-right: 1%;
 	border-bottom: 1px solid #d9d9d9;
 }
 
-.wt2title input{
+.wt2title input {
 	width: 99%;
 	height: 24px;
 	border: #afafaf 1px solid;
 }
 
-.wt3 select{
+.wt3 select {
 	width: 120px;
 	height: 30px;
 	border: #afafaf 1px solid;
 }
 
-.wt3 input{
+.wt3 input {
 	width: 120px;
 	height: 24px;
 	border: #afafaf 1px solid;
 }
 
-.wt4{
+.wt4 {
 	width: 39%;
 	padding-left: 1%;
 	border-bottom: 1px solid #d9d9d9;
 }
 
-.wt4 input{
+.wt4 input {
 	width: 95%;
 	height: 24px;
 	border: #afafaf 1px solid;
 }
 
-.wt2file{
+.wt2file {
 	padding: 1%;
-	color: #6f6f6f;
 	font-size: 12px;
+	color: #6f6f6f;
 	border-bottom: 1px solid #d9d9d9;
 }
 
-.wt2file input{
-	color: #6f6f6f;
+.wt2file input {
 	padding-bottom: 1%;
+	color: #6f6f6f;
 }
 
-.wt2text{
-	padding-left: 1%;
+.wt2text {
 	padding-top: 0.5%;
+	padding-left: 1%;
 }
 
-.wt2text textarea{
+.wt2text textarea {
 	width: 99%;
 	height: 82px;
 	box-sizing: border-box;
 }
 
-.wt2msg{
-	color: #6f6f6f;
-	font-size: 12px;
-	border: #afafaf 1px solid;
-	padding: 1.7%;
-	margin: 1.5%;
+.wt2msg {
 	line-height: 1.5em;
+	margin: 1.5%;
+	padding: 1.7%;
 	box-sizing: border-box;
+	font-size: 12px;
+	color: #6f6f6f;
+	border: #afafaf 1px solid;
 }
 
-.wt5{
+.wt5 {
+	height: 30px;
+	text-align: center;
+	margin: 0 auto;
 	border-top: 2px solid black;
 	border-bottom: 1px solid white;
-	margin: 0 auto;
-	text-align: center;
-	height: 30px
 }
 
-.wt5 input{
-	margin-top: 30px;
-	font-weight: bold;
-	font-size: 13px;
+.wt5 input {
 	width: 89px;
 	height: 30px;
+	margin-top: 30px;
 	margin-bottom: 12%;
+	font-size: 13px;
+	font-weight: bold;
 }
