--- a/WebContent/css/write.css
+++ b/WebContent/css/write.css
@@ -88,8 +88,8 @@
 }
 
 .wt3 select {
-	/* width: 120px; */
-	width:15%;
+	width: 120px;
+	/* width:15%; */
 	height: 30px;
 	border: #afafaf 1px solid;
 }
